header and hero content

--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,25 @@ footer {
     background-color: orchid;
 }
 
-.bio {
-    background-color: green;
+.welcome-container {
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    background-image: url(images/restaurant_hero_img.jpg); /*Photo by K8 on Unsplash*/
 }
+
+    .welcome {
+        background-color: green;
+        width: 80%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 1.35rem;
+        color: yellow;
+    }
 
 .hours {
     background-color: blueviolet;
