--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,16 @@ footer {
     background-color: orchid;
 }
 
+body {
+    background-color: black;
+}
+
 .welcome-container {
     display: flex;
     justify-content: center;
     height: 300px;
     background-image: url(images/restaurant_hero_img.jpg); /*Photo by K8 on Unsplash*/
+    /*background-size: cover;*/
 }
 
     .welcome {
@@ -52,11 +57,39 @@ footer {
 
 .hours {
     background-color: blueviolet;
+    display: grid;
+    grid-template-columns: repeat(2, 25%);
+    justify-content: space-evenly;
+    grid-gap: 5px 5px;
+    color: yellow;
+    height: 100px;
 }
+
+    .hours h2 {
+        grid-area: 1 / 1 / span 1 / span 2;
+        justify-self: center;
+    }
+
+    .hours-cell {
+        font-size: 1.5rem;
+    }
 
 .location {
     background-color: blue;
+    color: yellow;
+    height: 80px;
+    display: grid;
+    align-items: center;
+    margin-top: 10px;
 }
+
+    .location h2 {
+        margin-left: 10px;
+    }
+
+    .location p {
+        margin-left: 40px;
+    }
 
 .reservations {
     background-color: red;
