bringing up to date

--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: sans-serif;
+    color:  #E0D7AD;
 }
 
 .appetizers {
@@ -169,9 +171,20 @@ body {
 .menu-header {
     text-align: center;
     margin: 10px auto;
+    font-family: "Tangerine", cursive;
+    font-size: 3rem;
 }
 
 .menu-item {
     text-align: center;
 }
+
+    .menu-item h4 {
+        margin: 8px auto;
+        font-weight: 900;
+    }
+
+    .menu-item p {
+        margin-bottom: 15px;
+    }
 
