--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,17 @@ nav {
         display: none;
     }
 
+    .topnav li a {
+        font-size: 2rem;
+        text-decoration: none;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
     .active {
-        display: block;
+        display: flex;
+        list-style: none;
+        justify-content: space-evenly;
+        background-color: crimson;
     }
 
 footer {
