--- a/styles.css
+++ b/styles.css
@@ -228,11 +228,19 @@ form {
         font-weight: bold;
         display: flex;
         flex-direction: column;
+        margin-left: 25px;
     }
 
     label {
         font-size: 1.4rem;
         color: cornsilk;
+    }
+
+    .not-submit {
+        width: 200px;
+        padding: 3px;
+        border-radius: 2px;
+        margin-top: 10px;
     }
 
     .submit input {
