--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
     display: flex;
     justify-content: center;
     height: 300px;
-    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.7)), url(assets/images/hero_alt.jpg); /*Photo by Clem Onojeghuo on Unsplash*/
+    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(assets/images/hero_alt.jpg); /*Photo by Clem Onojeghuo on Unsplash*/
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -252,3 +252,80 @@ form {
         background: cornsilk;
         color: crimson;
     }
+
+/*Styles for medium-resolution screens*/
+
+@media only screen and (min-width: 481px) {
+    .form-item {
+        margin-left: 60px;
+    }
+
+    .not-submit {
+        width: 300px;
+    }
+
+    .submit {
+        margin-left: 80px;
+    }
+}
+
+/*Styles for high-resolution screens*/
+
+@media only screen and (min-width: 769px) {
+    .welcome-container {
+        height: 450px;
+        background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(assets/images/hero_alt_lg.jpg);
+    }
+
+    .welcome {
+        height: 200px;
+        margin-top: 110px;
+        font-size: 2.3rem;
+    }
+
+    .hours-location-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+        .hours {
+            width: 50%;
+            height: 200px;
+        }
+
+            .hours-cell {
+                font-size: 2rem;
+            }
+
+        .location {
+            width: 50%;
+            height: 200px;
+            font-size: 2rem;
+        }
+    
+    .reservations {
+        font-size: 2rem;
+    }
+
+    .appetizers, .entrees, .desserts {
+        font-size: 2rem;
+    }
+
+    .menu-header {
+        font-size: 8rem;
+    }
+
+    .reservations-heading {
+        font-size: 3rem;
+        margin: 55px 0 50px 0;
+    }
+
+    .form-item {
+        margin-left: 100px;
+        margin-bottom: 60px;
+    }
+
+    label {
+        margin: 15px 0 15px 0;
+    }
+}
