--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -65,7 +65,7 @@ body {
     display: flex;
     justify-content: center;
     height: 300px;
-    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(assets/images/hero_alt.jpg); /*Photo by Clem Onojeghuo on Unsplash*/
+    background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(../images/hero_alt.jpg); /*Photo by Clem Onojeghuo on Unsplash*/
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -297,7 +297,7 @@ form {
 
     .welcome-container {
         height: 450px;
-        background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(assets/images/hero_alt_lg.jpg);
+        background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.8)), url(../images/hero_alt_lg.jpg);
     }
 
     .welcome {
